--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
       color: #d35400;
       text-align: center;
     }
-    .logo {
-      display: block;
-      margin: 0 auto 20px;
-      max-width: 200px;
-    }
     form {
       max-width: 400px;
       margin: 0 auto;
@@ -94,8 +89,7 @@
     <label for="quantidade">Quantidade:</label>
     <input type="number" id="quantidade" name="quantidade" min="1" required />
 
-    <label for="valor">Valor unitário (R$):</label>
-    <input type="number" id="valor" name="valor" step="0.01" value="6.00" required />
+    <p><strong>Valor unitário:</strong> R$ 7,00</p>
 
     <div class="pix">
       <strong>Chave Pix:</strong><br />
@@ -111,9 +105,9 @@
   <script>
     function copiarPix() {
       const chave = document.getElementById('chavePix').innerText;
-      navigator.clipboard.writeText(chave).then(function() {
+      navigator.clipboard.writeText(chave).then(() => {
         alert('Chave Pix copiada!');
-      }, function(err) {
+      }).catch(() => {
         alert('Erro ao copiar chave Pix.');
       });
     }
@@ -124,13 +118,12 @@
       const sabor = document.getElementById('sabor').value;
       const saboresExtras = document.getElementById('saboresExtras').value;
       const quantidade = parseInt(document.getElementById('quantidade').value);
-      const valor = parseFloat(document.getElementById('valor').value);
+      const valor = 7.00;
       const total = (quantidade * valor).toFixed(2);
 
       const mensagem = `🍽️ Pedido de Empadas - Delícias da Didi
 
 👤 Nome: ${nome}
-
 📦 Sabores: ${sabor}${saboresExtras ? ' + ' + saboresExtras : ''}
 🔢 Quantidade: ${quantidade}
 💰 Valor unitário: R$ ${valor.toFixed(2)}
